# mortgage-ops

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_CONTRACT.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/agents/: README.md  amortization-agent.md  refi-npv-agent.md  stress-test-agent.md
.claude/skills/mortgage-ops/: LICENSE.txt  SKILL.md
.github/workflows/: audit.yml  ci.yml  integration.yml
.planning/: BEST-IN-CLASS-ROADMAP.md  CITATION-COVERAGE.md  HOUSE-PURCHASE-GOAL-2026.md  MORTGAGE-OPS-COMPREHENSIVE-LOOP.md  MORTGAGE-OPS-FOLLOWUPS-PROGRESS.md  MORTGAGE-OPS-FOLLOWUPS-REPORT.md  MORTGAGE-OPS-LITERATURE-GOAL.md  MORTGAGE-OPS-LOOP-PROGRESS.md  MORTGAGE-OPS-LOOP-REPORT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  ZOTERO-CLEANUP-TODO.md  config 3.json  config.json  reference-refresh-2026.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundations-money-discipline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  VERIFICATION.md
.planning/phases/02-regulatory-reference-data-rules-predicates/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-PLAN-OUTLINE.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v1.1-property-analysis.md
config/: household.example.yml  profile.example.yml
data/: known-loans.yml
data/reference/: atr-qm-thresholds.yml  conforming-limits-2026.yml  fannie-llpa-matrix.yml  fha-limits-2026.yml  fha-mip-rates.yml  freddie-eligibility-matrix.yml  insurance-estimate-defaults.yml  irs-pub936.yml  property-analysis-heuristics.yml  usda-income-limits.yml  va-funding-fees.yml  va-residual-income.yml
docs/: REFRESH-LEDGER.md  dependency-review.md  live-integration.md  observability.md
evals/: __init__.py  metrics.py  runner.py
evals/expected/: affordability-01.json  affordability-02.json  affordability-03.json  amortize-01.json  amortize-02.json  amortize-03.json  arm-01.json  arm-02.json  arm-03.json  compare-01.json  compare-02.json  compare-03.json  evaluate-01.json  evaluate-02.json  evaluate-03.json  live-rate-injection-01.json  property-analysis-01.json  refinance-01.json  refinance-02.json  refinance-03.json  stress-01.json  stress-02.json  stress-03.json
evals/prompts/: affordability-01.md  affordability-02.md  affordability-03.md  amortize-01.md  amortize-02.md  amortize-03.md  arm-01.md  arm-02.md  arm-03.md  compare-01.md  compare-02.md  compare-03.md  evaluate-01.md  evaluate-02.md  evaluate-03.md  live-rate-injection-01.md  property-analysis-01.md  refinance-01.md  refinance-02.md  refinance-03.md  stress-01.md  stress-02.md  stress-03.md
lib/: affordability.py  amortize.py  apr.py  arm.py  fred_cache.py  household.py  models.py  money.py  observability.py  points.py  profile.py  property_analysis.py  property_block_detector.py  property_extractor.py  property_listing.py  property_persistence.py  property_report.py  property_verdict.py  refinance.py  stress.py
lib/rules/: _loader.py  atr_qm.py  conventional_pmi.py  fannie_eligibility.py  fha_mip.py  freddie_eligibility.py  insurance.py  irs_pub936.py  loan_type.py  pmi.py  reg_z.py  types.py  usda.py  va_funding_fee.py  va_residual_income.py
orchestration/: db-write.mjs  init-db.mjs  lockfile.mjs
references/: arm-mechanics.md  data-layer.md  points-breakeven.md  refi-npv.md  rules-catalog.md  stress-tests.md
scripts/: _cli_helpers.py  _generate_apr_oracle_fixtures.py  _generate_arm_fixtures.py  affordability.py  amortize.py  apr_reg_z.py  arm_simulate.py  audit-deps.sh  points_breakeven.py  refi_npv.py  stress_test.py
scripts/hooks/: block-user-layer.py
tests/: _skill_helpers.py  conftest.py  test_affordability.py  test_amortize.py  test_apr.py  test_arm.py  test_block_user_layer.py  test_cli_helpers.py  test_evals_coverage.py  test_evals_metrics.py  test_evals_runner.py  test_fixtures.py  test_fred_cache.py  test_fred_cli.py  test_fred_cli_live.py  test_household.py  test_models.py  test_money.py  test_observability.py  test_oracles_apr.py  test_oracles_arm.py  test_oracles_arm_reset.py  test_oracles_handcalc.py  test_oracles_points.py  test_oracles_refi.py  test_points.py  test_profile.py  test_property_analysis.py  test_property_analyze_cli.py  test_property_block_detector.py  test_property_extractor.py  test_property_fetch.py  test_property_ingestion_integration.py  test_property_listing.py  test_property_persistence.py  test_property_report.py  test_property_verdict.py  test_refinance.py  test_repo_hygiene.py  test_skill.py  (+6 more)
tests/e2e/: README.md  _regenerate_snapshots.py  conftest.py  test_scenario_a_conv30.py  test_scenario_b_fha_ftb.py  test_scenario_c_jumbo_bay.py  test_scenario_d_arm51_refi.py
tests/fixtures/: golden_pmt.json
tests/oracles/: test_mortgagemodeler_parity.py
tests/test_orchestration/: test_db_lifecycle.py  test_gitignore_phase09.py  test_init_db_idempotent.py  test_known_loans_smoke.py  test_lock_stress.py  test_lockfile.py  test_lockfile_unit.py  test_parallel_invocation.py  test_render_markdown.py  test_render_markdown_byte_identical.py  test_stale_lockfile_recovery.py
tests/test_reference/: test_schema.py  test_yaml_count_audit.py
tests/test_rules/: test_atr_qm.py  test_citation_coverage.py  test_citation_coverage_mutations.py  test_conventional_pmi.py  test_fannie_eligibility.py  test_fha_mip.py  test_freddie_eligibility.py  test_insurance.py  test_irs_pub936.py  test_loader.py  test_loan_type.py  test_phase2_smoke.py  test_pmi.py  test_reg_z.py  test_usda.py  test_va_funding_fee.py  test_va_residual_income.py
(+501 files in other folders)
