[project]
name = "mortgage-ops"
version = "0.1.0"
description = "Personal-use mortgage analysis: deterministic Python calc engine + Claude skill frontend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
    "python-dateutil>=2.9.0",
    "numpy-financial==1.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "mypy>=1.20",
    "ruff>=0.15",
    "pre-commit>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lib", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "TCH",
    "PT",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["lib", "tests", "scripts"]
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "numpy_financial"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
