[project]
name = "mortgage-ops"
version = "0.1.0"
description = "Personal-use mortgage analysis: deterministic Python calc engine + Claude skill frontend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3",
    "python-dateutil>=2.9.0",
    "numpy-financial==1.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "anthropic==0.100.0",
    "mypy>=1.20",
    "pre-commit>=4.6",
    "pytest>=9.0",
    "pytest-timeout>=2.3",
    "ruff>=0.15",
    "tiktoken>=0.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lib", "tests", "scripts", ".claude/skills/mortgage-ops/scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "TCH",
    "PT",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["lib", "tests", "scripts", ".claude/skills/mortgage-ops/scripts"]
# Phase 10 (Plan 10-01) relocation: `from scripts._cli_helpers import ...` in the
# relocated CLIs and tests/test_cli_helpers.py must resolve to the colocated
# helper at .claude/skills/mortgage-ops/scripts/_cli_helpers.py. mypy_path adds
# the skill root so mypy can find `scripts/` (namespace package) there. The
# repo root `.` is implicit (cwd); listing it explicitly is safe.
mypy_path = [".", ".claude/skills/mortgage-ops"]
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "numpy_financial"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = [".", ".claude/skills/mortgage-ops"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
