[project]
name = "mortgage-ops"
version = "0.1.0"
description = "Personal-use mortgage analysis: deterministic Python calc engine + Claude skill frontend"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0,<1.0",
    "duckdb>=1.4,<2.0",
    "pydantic>=2.13.3",
    "python-dateutil>=2.9.0",
    "numpy-financial==1.0.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "freezegun>=1.5",            # Phase 12 SC-2 cache TTL mocking (LIVE-03)
    "mypy>=1.20",
    "pre-commit>=4.6",
    "pytest>=9.0",
    "pytest-timeout>=2.3",
    "python-frontmatter>=1.1",   # Phase 12 evals/prompts/*.md frontmatter parsing (EVAL-01)
    "ruff>=0.15",
    # tiktoken is used ONLY by tests/_skill_helpers.py for Phase 10 SKILL.md
    # token-budget tests (cl100k_base encoder, per Phase 10 RESEARCH §(i) +
    # LOCKED DECISION D-02). It is explicitly NOT used for Phase 11 subagent
    # token budgeting — SUBA-06 uses anthropic.count_tokens (the official
    # Claude tokenizer, per Plan 11-05 D-01); the "tiktoken REJECTED" note in
    # tests/test_subagents.py refers specifically to that subagent context.
    "tiktoken>=0.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lib", "tests", "scripts", ".claude/skills/mortgage-ops/scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "TCH",
    "PT",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["lib", "tests", "scripts", ".claude/skills/mortgage-ops/scripts"]
# Phase 10 (Plan 10-01) relocation: `from scripts._cli_helpers import ...` in the
# relocated CLIs and tests/test_cli_helpers.py must resolve to the colocated
# helper at .claude/skills/mortgage-ops/scripts/_cli_helpers.py. mypy_path adds
# the skill root so mypy can find `scripts/` (namespace package) there. The
# repo root `.` is implicit (cwd); listing it explicitly is safe.
mypy_path = [".", ".claude/skills/mortgage-ops"]
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "numpy_financial"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

# Phase 13 Wave 0: lib.property_* modules are stubbed by xfail tests until
# waves 1-5 ship them. Tests lazy-import inside function bodies so collection
# succeeds; mypy needs the missing-imports waiver until those waves land.
# Remove or pare back per-module entries as each wave ships its lib module.
[[tool.mypy.overrides]]
module = "lib.property_block_detector"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lib.property_extractor"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lib.property_persistence"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = [".", ".claude/skills/mortgage-ops"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
